2022/national/day1/match/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: match-networkpolicy
  namespace: skills
spec:
  podSelector:
    matchLabels:
      type: match
  policyTypes:
    - Ingress
  ingress:
    - from: []
